added alt tag for image

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -28,7 +28,7 @@
             </section>
         </main>
         <aside>
-            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/hamilton-new-zealand/800x800/hamilton_new_zealand_temple_exterior.png" width="200">
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/hamilton-new-zealand/800x800/hamilton_new_zealand_temple_exterior.png" alt="Hamilton New Zealand Temple" width="200">
         </aside>
         <footer>
             Cody Wheeler
