--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cody Wheeler | WDD 130</title>
+        <meta name="description" content="Cody Wheeler | WDD130 | Learning to build in html and css by building a rafting website">
+        <meta name="author" content="Cody Wheeler">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -18,6 +20,18 @@
             <img src="images/profile.jpg" alt="Cody" width="200">
             <p>Hi, I'm Cody. I enjoy learning and working on code projects for fun. I'm excited to continue to progress and learn more to continue to expand my knowledge and understanding.</p>    
         </main>
+        <aside>
+            <h2>Utah</h2>
+            <img src="https://images.pexels.com/photos/954289/pexels-photo-954289.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Utah" width="200">
+            <p>Utah is a wonderful calm state to live in generally. 
+                There are lots of things to do in all seasons. Lots 
+                of lakes here make it ideal for boating and other 
+                similar water sports. Wonderful outdoor places to 
+                hike to and mountains to hike up. During the winter
+                there are plenty of mountains to snowboard or ski 
+                down as well.
+            </p>
+        </aside>
         <footer>
             <p>&copy;2025 Cody Wheeler Utah</p>
         </footer>
