compressed utah image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </main>
         <aside>
             <h2>Utah</h2>
-            <img src="https://images.pexels.com/photos/954289/pexels-photo-954289.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Utah" width="200">
+            <img src="images/utah.jpg" alt="Utah" width="200">
             <p>Utah is a wonderful calm state to live in generally. 
                 There are lots of things to do in all seasons. Lots 
                 of lakes here make it ideal for boating and other 
