updated some styling and image sizing

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <meta name="description" content="Cody Wheeler | WDD130 | Starting the Rafting Site">
+    <meta name="author" content="Cody Wheeler">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
