updated about page and css styling using grid and flex and other values.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <header>
-        <img src="images/z-wwr-oars.png" alt="Logo">
-        <nav>
+        <img src="images/z-wwr-oars.png" alt="Logo" class="logo">
+        <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
@@ -34,20 +34,38 @@
                 </p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>The Company founded in 1995 has had it's fair share of rapids. 
                 Come along for a ride and continue in the white water as we 
                 continue to adventure together.
             </p>
+            <img src="images/history.jpg" alt="history" >
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus deserunt, architecto iure corporis alias necessitatibus a repudiandae cum dolorem ipsum, vel quasi blanditiis iusto! Aperiam tempora reiciendis et sint quibusdam.
+            </p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/ww1.jpg" alt="WhiteWater1">
-            <img src="images/ww2.jpg" alt="WhiteWater2">
-            <img src="images/ww3.jpg" alt="WhiteWater3">
-            <img src="images/ww4.jpg" alt="WhiteWater4">
-            <img src="images/ww5.jpg" alt="WhiteWater5">
+            <figure>
+                <img src="images/ww1.jpg" alt="WhiteWater1">
+                <figcaption>Silent Storm</figcaption>
+            </figure>
+            <figure>
+                <img src="images/ww2.jpg" alt="WhiteWater2">
+                <figcaption>Mighty Maelstrom</figcaption>
+            </figure>
+            <figure>
+                <img src="images/ww3.jpg" alt="WhiteWater3">
+                <figcaption>Open Waters</figcaption>
+            </figure>
+            <figure>
+                <img src="images/ww4.jpg" alt="WhiteWater4">
+                <figcaption>The Wild Surge</figcaption>
+            </figure>
+            <figure>
+                <img src="images/ww5.jpg" alt="WhiteWater5">
+                <figcaption>Aventurists Paddling</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
