--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>White Water Rafting - About Us</title>
     <meta name="description" content="Cody Wheeler | WDD130 | Starting the Rafting Site">
     <meta name="author" content="Cody Wheeler">
     <link rel="stylesheet" href="styles/rafting.css">
