updated iframe width height to avoid error.

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -57,7 +57,7 @@
                 <p><strong>Phone:</strong> 123-456-7890</p>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12695.330102047353!2d-74.00594126187088!3d40.71277659314801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1b28790717%3A0x2ad91bb4384cc5b9!2sNew+York!5e0!3m2!1sen!2sus!4v1688723371485!5m2!1sen!2sus" width="100%" height="100%" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12695.330102047353!2d-74.00594126187088!3d40.71277659314801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1b28790717%3A0x2ad91bb4384cc5b9!2sNew+York!5e0!3m2!1sen!2sus!4v1688723371485!5m2!1sen!2sus" width="650px" height="450px" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
         <section>
