created trips and index home pafge, updated some things added images and updated styling for index and trips as well.

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,15 +22,13 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main id="contact-page">
         <div class="hero">
             
             <h1>Contact Us</h1>
             <article>
-                <p>If you have any questions feel free to reach out to us here.
-                </p>
-                <p>Phone: 123-456-7890<br>Email: contact-us@whitewaterrafting.com</p>
-                
+                <p>If you have any questions feel free to reach out to us here.</p>
+                <p>Phone: 123-456-7890<br>Email: contact-us@whitewaterrafting.com</p>   
             </article>
         </div>
         <section class="team">
